# extraction-gym

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  FAILURE_TAXONOMY.md  LABELING_POLICY.md  SCHEMA_V2_PROPOSAL.md  WRITEUP.md
extraction_gym/: cli.py
extraction_gym/adversary/: generator.py  judges.py  round.py  suite.py
extraction_gym/baselines/: dspy_gepa.py  dspy_miprov2.py
extraction_gym/core/: budget.py  cache.py  checkforms.py  coldforms.py  freeze.py  goldset.py  labelize.py  prelabel.py  registry.py  release.py  scorers.py
extraction_gym/eval/: chart.py  runner.py  stats.py  suite_eval.py
extraction_gym/optimizer/: loop.py  mutate.py  state.py
goldset/sroie-v1/: SOURCE.json
goldset/v1/: CANDIDATES.md  MANIFEST.json
goldset/v2-candidates/: QUEUE.md
registry/: ledger.jsonl
reports/: BENCHMARK.md  baseline-root-ce68bd4c4e-gold-v1.md  candidate-2f29e944a7-gold-v1.md  control1-state.json  control2-state.json  control3-state.json  gepa-baseline.json  gepa-transplant-verdict.json  miprov2-baseline.json  miprov2-transplant-gold.json  miprov2-transplant-verdict.json  passrun1-state.json  release-attestation.json  replay-run1-v2.json  run1-state.json  sroie-naive-claude-haiku-4-5.json  sroie-naive-gpt-4o-mini.json
scripts/: gepa_transplant.py  make_control_ablation.py  optimizer_gap_chart.py  replay_run1_gate_v2.py  sroie_audit_finalize.py  sroie_audit_prep.py  sroie_baseline.py
tests/: test_adversary.py  test_gate_v2.py  test_gym.py  test_optimizer.py  test_registry_runner.py  test_scorers.py  test_sroie.py  test_stats_budget.py
(+406 files in other folders)
