[project]
name = "extraction-gym"
version = "0.1.0"
description = "Adversarial generator / optimizer harness for LLM extraction programs, gated by a frozen human-verified referee."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
chart = ["matplotlib>=3.8"]

[project.scripts]
gym = "extraction_gym.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["extraction_gym*"]

[tool.ruff]
line-length = 110
target-version = "py311"
